processcore/plugins/network/helper/main.cpp
@@ -86,5 +86,7 @@ int main(int argc, char **argv)
         std::this_thread::sleep_for(std::chrono::seconds(1));
     }
 
+    capture->stop();
+
     return 0;
 }
